[gd_scene load_steps=36 format=3 uid="uid://dhufw2mexwhi7"]

[ext_resource type="Script" uid="uid://b2ixn3hkw6x6r" path="res://src/Assets/kitchen-assets/nutribon_box.gd" id="1_18117"]
[ext_resource type="Texture2D" uid="uid://d8uv8rgpkcwn" path="res://src/Assets/00-general-3d-assets/textures/Wood061_2K_Color.jpg" id="2_r2d2l"]
[ext_resource type="Script" uid="uid://c2rj7vjaa8uv2" path="res://addons/godot-xr-tools/objects/interactable_area.gd" id="3_02kvo"]
[ext_resource type="PackedScene" uid="uid://c1pv5eyb3pnow" path="res://src/Assets/00-general-3d-assets/grab_particle.tscn" id="3_eyuvg"]
[ext_resource type="Texture2D" uid="uid://knxr4r8nwcfb" path="res://src/Assets/kitchen-assets/nutribunplastic.png" id="3_ln7c8"]
[ext_resource type="Script" uid="uid://d2j64x8gnsuue" path="res://addons/ateneo-virtual-reality-escape/inventory-system/inventory_slot.gd" id="4_c5wp6"]
[ext_resource type="PackedScene" uid="uid://ce7vysyvondf8" path="res://addons/godot-xr-tools/objects/snap_zone.tscn" id="5_02kvo"]
[ext_resource type="Material" uid="uid://dy43ogh4jhnpk" path="res://addons/ateneo-virtual-reality-escape/inventory-system/misc-resources/inventory_slot_shader_a.tres" id="6_eyuvg"]
[ext_resource type="Script" uid="uid://diyh2gha3h4eo" path="res://src/Assets/kitchen-assets/add_nutribuns_to_box.gd" id="7_r2d2l"]
[ext_resource type="PackedScene" uid="uid://b2tu637p36yyt" path="res://src/Assets/kitchen-assets/paper_roll.tscn" id="8_ln7c8"]
[ext_resource type="PackedScene" uid="uid://dswqagqi1ryk3" path="res://src/ois-objects/general/ois_cassette_tape.tscn" id="9_c5wp6"]
[ext_resource type="AudioStream" uid="uid://d3u4bv2kvrck8" path="res://src/Assets/audio/sfx/AMLML_sfx_woodbx_slide_01.ogg" id="12_ahpdi"]
[ext_resource type="AudioStream" uid="uid://b30hciawcbx4l" path="res://src/Assets/audio/sfx/AMLML_sfx_woodbx_slide_02.ogg" id="13_th0tv"]
[ext_resource type="AudioStream" uid="uid://bdqdv56elsjlm" path="res://src/Assets/audio/sfx/AMLML_sfx_woodbx_slide_03.ogg" id="14_ffpbc"]

[sub_resource type="BoxMesh" id="BoxMesh_iwp0s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y4hh1"]
albedo_texture = ExtResource("2_r2d2l")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ahpdi"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_th0tv"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ffpbc"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_d2juc"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_r81ig"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_b5rxv"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="PlaneMesh" id="PlaneMesh_mqgnj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ndg4n"]
transparency = 1
albedo_color = Color(0.224644, 0.13673, 0.0375243, 0.591)
albedo_texture = ExtResource("3_ln7c8")
albedo_texture_msdf = true
uv1_scale = Vector3(0.89, 0.27, 1)
uv1_offset = Vector3(0.07, -0.635, 0)

[sub_resource type="SphereMesh" id="SphereMesh_fc80v"]
radius = 0.2
height = 0.4

[sub_resource type="Animation" id="Animation_ln7c8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxMeshAndCollision/BoxDoor:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(9.87353e-24, -1.5708, 1.5708)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BoxMeshAndCollision/BoxDoor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.27731, 0.0749551, 0.0313969)]
}

[sub_resource type="Animation" id="Animation_02kvo"]
resource_name = "box_close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxMeshAndCollision/BoxDoor:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.261799, -1.5708, 1.5708), Vector3(9.87353e-24, -1.5708, 1.5708), Vector3(9.87353e-24, -1.5708, 1.5708)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BoxMeshAndCollision/BoxDoor:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.366667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.238, 0.01, 0.031), Vector3(-0.238, 0.075, 0.031), Vector3(0.27731, 0.0749551, 0.0313969)]
}

[sub_resource type="Animation" id="Animation_r2d2l"]
resource_name = "box_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxMeshAndCollision/BoxDoor:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(9.87353e-24, -1.5708, 1.5708), Vector3(9.87353e-24, -1.5708, 1.5708), Vector3(0.261799, -1.5708, 1.5708)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BoxMeshAndCollision/BoxDoor:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.27731, 0.0749551, 0.0313969), Vector3(-0.238, 0.075, 0.031), Vector3(-0.238, 0.01, 0.031)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c5wp6"]
_data = {
&"RESET": SubResource("Animation_ln7c8"),
&"box_close": SubResource("Animation_02kvo"),
&"box_open": SubResource("Animation_r2d2l")
}

[sub_resource type="QuadMesh" id="QuadMesh_02kvo"]
resource_local_to_scene = true
size = Vector2(3, 2)

[sub_resource type="ViewportTexture" id="ViewportTexture_ahpdi"]
viewport_path = NodePath("Viewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_th0tv"]
transparency = 1
cull_mode = 2
albedo_texture = SubResource("ViewportTexture_ahpdi")
texture_filter = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_y4hh1"]
resource_local_to_scene = true
size = Vector3(3, 2, 0.02)

[sub_resource type="BoxShape3D" id="BoxShape3D_iwp0s"]
size = Vector3(0.839331, 0.371436, 0.513767)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_b5rxv"]
streams_count = 3
stream_0/stream = ExtResource("12_ahpdi")
stream_1/stream = ExtResource("13_th0tv")
stream_2/stream = ExtResource("14_ffpbc")

[node name="NutribonBox" type="Node3D"]
script = ExtResource("1_18117")

[node name="BoxMeshAndCollision" type="Node3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BoxMeshAndCollision"]
transform = Transform3D(0.00968181, 0, 0, 0, 0.152379, 0, 0, 0, 0.314223, 0.00737643, 0, 0.0313642)
mesh = SubResource("BoxMesh_iwp0s")
surface_material_override/0 = SubResource("StandardMaterial3D_y4hh1")

[node name="StaticBody3D" type="StaticBody3D" parent="BoxMeshAndCollision/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BoxMeshAndCollision/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ahpdi")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="BoxMeshAndCollision"]
transform = Transform3D(0.00968181, 0, 0, 0, 0.152379, 0, 0, 0, 0.314223, 0.545906, 0, 0.0313642)
mesh = SubResource("BoxMesh_iwp0s")
surface_material_override/0 = SubResource("StandardMaterial3D_y4hh1")

[node name="StaticBody3D" type="StaticBody3D" parent="BoxMeshAndCollision/MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BoxMeshAndCollision/MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_th0tv")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="BoxMeshAndCollision"]
transform = Transform3D(-4.23205e-10, 0, 0.539874, 0, 0.152379, 0, -0.00968181, 0, -2.35987e-08, 0.27565, 1.19209e-07, -0.120229)
mesh = SubResource("BoxMesh_iwp0s")
surface_material_override/0 = SubResource("StandardMaterial3D_y4hh1")

[node name="StaticBody3D" type="StaticBody3D" parent="BoxMeshAndCollision/MeshInstance3D3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BoxMeshAndCollision/MeshInstance3D3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ffpbc")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="BoxMeshAndCollision"]
transform = Transform3D(-4.23205e-10, 0, 0.539874, 0, 0.152379, 0, -0.00968181, 0, -2.35987e-08, 0.276198, -0.000545681, 0.183215)
mesh = SubResource("BoxMesh_iwp0s")
surface_material_override/0 = SubResource("StandardMaterial3D_y4hh1")

[node name="StaticBody3D" type="StaticBody3D" parent="BoxMeshAndCollision/MeshInstance3D4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BoxMeshAndCollision/MeshInstance3D4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_d2juc")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="BoxMeshAndCollision"]
transform = Transform3D(1.84989e-17, -1.31745e-08, 0.539874, -0.00968181, -1.31745e-08, 0, 4.23205e-10, -0.301397, -2.35987e-08, 0.276198, -0.0661678, 0.0346792)
mesh = SubResource("BoxMesh_iwp0s")
surface_material_override/0 = SubResource("StandardMaterial3D_y4hh1")

[node name="StaticBody3D" type="StaticBody3D" parent="BoxMeshAndCollision/MeshInstance3D5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BoxMeshAndCollision/MeshInstance3D5/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_r81ig")

[node name="BoxDoor" type="MeshInstance3D" parent="BoxMeshAndCollision"]
transform = Transform3D(1.31043e-13, 1.08962e-06, -0.55, 0.01, -1.08962e-06, -5.43044e-24, -3.61999e-08, -0.301, -1.99099e-06, 0.27731, 0.0749551, 0.0313969)
mesh = SubResource("BoxMesh_iwp0s")
surface_material_override/0 = SubResource("StandardMaterial3D_y4hh1")

[node name="GrabParticle" parent="BoxMeshAndCollision/BoxDoor" instance=ExtResource("3_eyuvg")]
transform = Transform3D(8.73622e-10, 66.6667, -0.000241333, 8.01768e-06, -8.0177e-06, -2.21484, -1.21212, -7.64061e-17, -4.38788e-06, 6.59057, -0.039813, 0.041128)
visible = false

[node name="StaticBody3D" type="StaticBody3D" parent="BoxMeshAndCollision/BoxDoor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BoxMeshAndCollision/BoxDoor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_b5rxv")

[node name="BoxLabel1" type="MeshInstance3D" parent="."]
transform = Transform3D(0.457, 0, 0, 0, -1.38565e-08, -0.112, 0, 0.317, -4.89568e-09, 0.459091, 0.00390198, 0.286954)
mesh = SubResource("PlaneMesh_mqgnj")
surface_material_override/0 = SubResource("StandardMaterial3D_ndg4n")

[node name="BoXLabel2" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.457, 2.7713e-08, 0, 1.74637e-15, 1.38565e-08, -0.112, -3.99522e-08, -0.317, -4.89568e-09, 0.432873, 0.00390198, -0.192729)
mesh = SubResource("PlaneMesh_mqgnj")
surface_material_override/0 = SubResource("StandardMaterial3D_ndg4n")

[node name="N1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.146995, 0, 0.0429306)
script = ExtResource("4_c5wp6")
snap_zone_radius = 0.09
group_required = "nutribun_sealed"
metadata/_custom_type_script = "uid://d2j64x8gnsuue"

[node name="SnapZone" parent="N1" instance=ExtResource("5_02kvo")]
grab_distance = 0.2

[node name="MeshInstance3D" type="MeshInstance3D" parent="N1"]
mesh = SubResource("SphereMesh_fc80v")
surface_material_override/0 = ExtResource("6_eyuvg")

[node name="N2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.333141, 0, 0.0429306)
script = ExtResource("4_c5wp6")
snap_zone_radius = 0.09
group_required = "nutribun_sealed"
metadata/_custom_type_script = "uid://d2j64x8gnsuue"

[node name="SnapZone" parent="N2" instance=ExtResource("5_02kvo")]
grab_distance = 0.2

[node name="MeshInstance3D" type="MeshInstance3D" parent="N2"]
mesh = SubResource("SphereMesh_fc80v")
surface_material_override/0 = ExtResource("6_eyuvg")

[node name="N3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.513147, 0, 0.0429306)
script = ExtResource("4_c5wp6")
snap_zone_radius = 0.09
group_required = "nutribun_sealed"
metadata/_custom_type_script = "uid://d2j64x8gnsuue"

[node name="SnapZone" parent="N3" instance=ExtResource("5_02kvo")]
grab_distance = 0.2

[node name="MeshInstance3D" type="MeshInstance3D" parent="N3"]
mesh = SubResource("SphereMesh_fc80v")
surface_material_override/0 = ExtResource("6_eyuvg")

[node name="N4" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.71198, 0, 0.0429306)
script = ExtResource("4_c5wp6")
snap_zone_radius = 0.09
group_required = "nutribun_sealed"
metadata/_custom_type_script = "uid://d2j64x8gnsuue"

[node name="SnapZone" parent="N4" instance=ExtResource("5_02kvo")]
grab_distance = 0.2

[node name="MeshInstance3D" type="MeshInstance3D" parent="N4"]
mesh = SubResource("SphereMesh_fc80v")
surface_material_override/0 = ExtResource("6_eyuvg")

[node name="Events" type="Node" parent="."]

[node name="AddNutribunsToBox" type="Node" parent="Events"]
script = ExtResource("7_r2d2l")
event_name = "AddNutribunsToBox"
metadata/_custom_type_script = "uid://bg8ikbbyucdg6"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c5wp6")
}
autoplay = "RESET"

[node name="Paper Roll" parent="." instance=ExtResource("8_ln7c8")]
transform = Transform3D(0.00503753, 0.937104, -0.349014, -0.999986, 0.00537555, 0, 0.00187614, 0.349009, 0.937118, 0.42964, -0.0634897, 0.0408477)
visible = false

[node name="NutribunTape" parent="." instance=ExtResource("9_c5wp6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.705212, -0.0422119, -0.0811856)
visible = false

[node name="Label" parent="NutribunTape/Viewport2Din3D/Viewport/Label" index="0"]
text = "NUTRIBUN"

[node name="Screen" parent="NutribunTape/Viewport2Din3D" index="1"]
mesh = SubResource("QuadMesh_02kvo")
surface_material_override/0 = SubResource("StandardMaterial3D_th0tv")

[node name="CollisionShape3D" parent="NutribunTape/Viewport2Din3D/StaticBody3D" index="0"]
shape = SubResource("BoxShape3D_y4hh1")

[node name="XRToolsInteractableArea2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.045372, 0.0425215, -0.202731)
collision_layer = 5242881
script = ExtResource("3_02kvo")
metadata/_custom_type_script = "uid://c2rj7vjaa8uv2"

[node name="CollisionShape3D" type="CollisionShape3D" parent="XRToolsInteractableArea2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.369666, -0.00163567, 0.254674)
shape = SubResource("BoxShape3D_iwp0s")

[node name="BoxSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.411257, 0.058961, 0)
stream = SubResource("AudioStreamRandomizer_b5rxv")

[connection signal="all_nutri_in_box" from="." to="Events/AddNutribunsToBox" method="_on_nutribon_box_all_nutri_in_box"]
[connection signal="slot_picked_up" from="N1" to="." method="_on_n_1_slot_picked_up"]
[connection signal="slot_picked_up" from="N2" to="." method="_on_n_2_slot_picked_up"]
[connection signal="slot_picked_up" from="N3" to="." method="_on_n_3_slot_picked_up"]
[connection signal="slot_picked_up" from="N4" to="." method="_on_n_4_slot_picked_up"]
[connection signal="pointer_event" from="XRToolsInteractableArea2" to="." method="_on_xr_tools_interactable_area_pointer_event"]

[editable path="BoxMeshAndCollision/BoxDoor/GrabParticle"]
[editable path="NutribunTape"]
[editable path="NutribunTape/Viewport2Din3D"]
[editable path="NutribunTape/Viewport2Din3D/Viewport/Label"]
[editable path="NutribunTape/GrabParticle"]
